<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="0.0dip"
			android:layout_weight="1.0" />
		<TabWidget android:id="@android:id/tabs" android:visibility="gone"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="0.0" />
		<RadioGroup android:gravity="center_vertical" android:id="@id/main_radio"
			android:layout_gravity="bottom" android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<RadioButton android:tag="radio_button0" 
				android:layout_marginTop="2.0dip" android:text="@string/tab_0"
				android:drawableTop="@drawable/icon_0_n" style="@style/main_tab_bottom" />
			<RadioButton android:tag="radio_button1"
				android:layout_marginTop="2.0dip" android:text="@string/tab_1"
				android:drawableTop="@drawable/icon_1_n" style="@style/main_tab_bottom" />
			<RadioButton android:tag="radio_button2"
				android:layout_marginTop="2.0dip" android:text="@string/tab_2"
				android:drawableTop="@drawable/icon_2_n" style="@style/main_tab_bottom" />
			<RadioButton android:tag="radio_button3"
				android:layout_marginTop="2.0dip" android:text="@string/tab_3"
				android:drawableTop="@drawable/icon_3_n" style="@style/main_tab_bottom" />
			<RadioButton android:tag="radio_button4"
				android:layout_marginTop="2.0dip" android:text="@string/tab_4"
				android:drawableTop="@drawable/icon_4_n" style="@style/main_tab_bottom" />
		</RadioGroup>
	</LinearLayout>
</TabHost>